--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,4 +1,5 @@
-include ../blocks/nav/_nav.pug
+include ../blocks/latestworks/_latestworks.pug
+include ../blocks/about/_about.pug
 
 <!DOCTYPE html>
 html(lang="en")
@@ -11,6 +12,7 @@ html(lang="en")
         link(rel="stylesheet", href="../node_modules/remodal/dist/remodal-default-theme.css")
         link(rel="stylesheet", href="./css/style.css")
     body
-        
+        +about
+        +latestworks
         script(src="https://code.jquery.com/jquery-3.4.1.min.js")
         script(src="../node_modules/remodal/dist/remodal.js")
