--- a/src/blocks/LatestWorks/_latestworks.pug
+++ b/src/blocks/LatestWorks/_latestworks.pug
@@ -7,28 +7,27 @@ mixin latestworks
                         .latestworks__header.d-flex.justify-content-center.align-content-center.align-items-center
                             h1.latestworks__header--title Latest Works
                 .row.d-flex
-                    .col-4
+                    .col-xl-4.col-lg-4.col-md-6.col-sm-6
                         .latestworks__panel.d-flex.justify-content-center.align-content-center.align-items-center
                             a(href="javascript:void(0)")
                                 img.latestworks__img(src='../dist/img/Work 1.png', alt='works first img')
-                    .col-4
+                    .col-xl-4.col-lg-4.col-md-6.col-sm-6
                         .latestworks__panel.d-flex.justify-content-center.align-content-center.align-items-center
                             a(href="javascript:void(0)")
                                 img.latestworks__img(src="../dist/img/work 2.png", alt="works second img")
-                    .col-4
+                    .col-xl-4.col-lg-4.col-md-6.col-sm-6
                         .latestworks__panel.d-flex.justify-content-center.align-content-center.align-items-center
                             a(href="javascript:void(0)")
                                 img.latestworks__img(src="../dist/img/work 3.png", alt="works third img")
-                .row
-                    .col-4
+                    .col-xl-4.col-lg-4.col-md-6.col-sm-6
                         .latestworks__panel.d-flex.justify-content-center.align-content-center.align-items-center
                             a(href="javascript:void(0)")
                                 img.latestworks__img(src="../dist/img/work 4.png", alt="works fourth img")
-                    .col-4
+                    .col-xl-4.col-lg-4.col-md-6.col-sm-6
                         .latestworks__panel.d-flex.justify-content-center.align-content-center.align-items-center
                             a(href="javascript:void(0)")
                                 img.latestworks__img(src="../dist/img/work 5.png", alt="works fifth img")
-                    .col-4
+                    .col-xl-4.col-lg-4.col-md-6.col-sm-6
                         .latestworks__panel.d-flex.justify-content-center.align-content-center.align-items-center
                             a(href="javascript:void(0)")
                                 img.latestworks__img(src="../dist/img/work 6.png", alt="works sixth img")
