--- a/src/blocks/about/_about.scss
+++ b/src/blocks/about/_about.scss
@@ -2,6 +2,14 @@
     &__wrapper {
         padding-top: 100px;
         padding-bottom: 120px;
+            @media screen and (max-width: 765px) {
+                padding-top: 60px;
+                padding-bottom: 90px;
+            }
+            @media screen and (max-width: 575px) {
+                padding-top: 20px;
+                padding-bottom: 60px;
+            }
     }
     &-header {
         font-family: Lato, sans-serif;
@@ -13,6 +21,12 @@
                 font-size: 50px;
                 font-weight: 300;
                 margin-bottom: 72px;
+                    @media screen and (max-width: 765px) {
+                        margin-bottom: 50px;
+                    }
+                    @media screen and (max-width: 575px) {
+                        margin-bottom: 20px;
+                    }
             }
             &__subtitle {
                 color: #5a5a5a;
