--- a/src/blocks/expert/_expert.pug
+++ b/src/blocks/expert/_expert.pug
@@ -6,43 +6,42 @@ mixin expert
                     .col-12.d-flex.justify-content-center
                         h1.expert__heading Expert in
                 .row
-                    .col-4
+                    .col-lg-4.col-md-6.col-12
                         .expert__panel-item.d-flex.flex-column.align-items-center
                             .expert__panel-circle.d-flex.justify-content-center.align-items-center
                                 img.expert__panel-icon(src='../dist/img/icon0.png', alt="")
                                 img.expert__panel-icon-alt(src='../dist/img/icon0_black.png', alt="")
                             h2.expert__panel-heading Mobile app design
                             p.expert__panel-paragraph Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
-                    .col-4
+                    .col-lg-4.col-md-6.col-12
                         .expert__panel-item.d-flex.flex-column.align-items-center
                             .expert__panel-circle.d-flex.justify-content-center.align-items-center
                                 img.expert__panel-icon(src='../dist/img/icon1.png', alt="")
                                 img.expert__panel-icon-alt(src='../dist/img/icon1_black.png', alt="")
                             h2.expert__panel-heading Web Design
                             p.expert__panel-paragraph Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    .col-4
+                    .col-lg-4.col-md-6.col-12
                         .expert__panel-item.d-flex.flex-column.align-items-center
                             .expert__panel-circle.d-flex.justify-content-center.align-items-center
                                 img.expert__panel-icon(src='../dist/img/icon2.png', alt="")
                                 img.expert__panel-icon-alt(src='../dist/img/icon2_black.png', alt="")
                             h2.expert__panel-heading web development 
                             p.expert__panel-paragraph Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
-                .row
-                    .col-4
+                    .col-lg-4.col-md-6.col-12
                         .expert__panel-item.d-flex.flex-column.align-items-center
                             .expert__panel-circle.d-flex.justify-content-center.align-items-center
                                 img.expert__panel-icon(src='../dist/img/icon3.png', alt="")
                                 img.expert__panel-icon-alt(src='../dist/img/icon3_black.png', alt="")
                             h2.expert__panel-heading product design
                             p.expert__panel-paragraph Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    .col-4
+                    .col-lg-4.col-md-6.col-12
                         .expert__panel-item.d-flex.flex-column.align-items-center
                             .expert__panel-circle.d-flex.justify-content-center.align-items-center
                                 img.expert__panel-icon.flex-grow-0(src='../dist/img/icon4.png', alt="")
                                 img.expert__panel-icon-alt(src='../dist/img/icon4_black.png', alt="")
                             h2.expert__panel-heading ux &amp; ui
                             p.expert__panel-paragraph Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
-                    .col-4
+                    .col-lg-4.col-md-6.col-12
                         .expert__panel-item.d-flex.flex-column.align-items-center
                             .expert__panel-circle.d-flex.justify-content-center.align-items-center
                                 img.expert__panel-icon(src='../dist/img/icon5.png', alt="")
