--- a/src/blocks/expert/_expert.scss
+++ b/src/blocks/expert/_expert.scss
@@ -63,6 +63,8 @@
 
         @media screen and (max-width: 575px) {
             padding-bottom: 50px;
+            padding-left: 15px;
+            padding-right: 15px;
         }
     }
 
