--- a/src/scss/_blocks.scss
+++ b/src/scss/_blocks.scss
@@ -1,1 +1,5 @@
 @import '../blocks/page/page';
+@import '../blocks/clients/clients';
+@import '../blocks/footer/footer';
+@import '../blocks/hire/hire';
+@import '../blocks/formHire/formHire';
