update cookies header

--- a/src/blocks/cookies/_cookies.pug
+++ b/src/blocks/cookies/_cookies.pug
@@ -1,7 +1,6 @@
 mixin cookies
     .cookies
-        .container.d-flex
+        .container.d-flex.justify-content-center
           h3.cookies__title This site uses cookies, so that my service can work better
-          form.cookies__form(action="#" method="get")
-            input.cookies__checkbox(type="checkbox" id="accept" name="Accept")
-            label.cookies__accept(for="accept") Accept
+          button.cookies__btn Accept
+            
