--- a/src/blocks/header/_header.pug
+++ b/src/blocks/header/_header.pug
@@ -16,15 +16,33 @@ mixin header
                         a.header__link(href="#") My Works 
                     li.header__item
                         a.header__link(href="#") Clients
-                    li.header__item
-                        a.header__link(href="#") dd
+                    hr.header__hr
+                    ul.header__social
+                        li.header__soc
+                            a.header__linkage(href="#") 
+                                i.fab.fa-facebook-f
+                        li.header__soc
+                            a.header__linkage(href="#") 
+                                i.fab.fa-twitter 
+                        li.header__soc
+                            a.header__linkage(href="#") 
+                                i.fab.fa-dribbble
+                        li.header__soc
+                          a.header__linkage(href="#") 
+                                i.fab.fa-behance  
 
         .container
             .header__desc.d-flex.justify-content-center
                 .header__logo
-                h1.header__title FREE PORTFOLIO PSD TEMPLATE  FOR GRAPHIC DESIGNERS 
-                h2.header__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                .header__logo2
+                .header__logo3
+            h1.header__title FREE PORTFOLIO PSD TEMPLATE  
+                br
+                | FOR GRAPHIC designerS
+            h2.header__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor  
+                br
+                | incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            a.header__link(href="#hireme")
                 button.header__btn HIRE ME
-                a.header__link(href="#")
-                    img.header__img             
+                            
          
