--- a/src/blocks/cookies/_cookies.scss
+++ b/src/blocks/cookies/_cookies.scss
@@ -1,9 +1,11 @@
 .cookies {
-
     background-color: #194277;
-    position: top;
+    position: sticky;
+    top: 0;
+    z-index: 6;
     padding-top: 22px;
     padding-bottom: 20px;
+
 
 
 
@@ -13,27 +15,26 @@
         font-size: 14px;
         font-weight: 400;
         line-height: 36px;
-
-
-
+        margin-right: 50px;
     }
 
-    &__checkbox {
-        display: none;
-    }
 
-    &__accept {
+
+    &__btn {
         background-color: white;
         border-radius: 15px;
+        border: none;
         width: 112px;
         height: 30px;
         color: #194277;
         font-family: 'Lato', sans-serif;
         font-size: 12px;
         font-weight: 700;
-        line-height: 16px;
         display: block;
     }
 
-
+    &__btn:hover {
+        background-color: #194277;
+        color: white;
+    }
 }
